<resources>
    <string name="app_name">Trill Wholesale</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="navbar_chevron_right_content_description">Click me</string>
    <string name="trill">Trill</string>
    <string name="company_title">TRILL</string>
    <string name="company_subtitle">Professional Audio.</string>
    <string name="instagram_account_link">http://instagram.com/_u/trill</string>
    <string name="facebook_account_link">https://www.facebook.com/people/Trill-speakers-kenya/100064104672545/</string>
    <string name="twitter_account_link">https://twitter.com/trill</string>
    <string name="tiktok_account_link">https://www.tiktok.com/@trills</string>
    <string name="contact_support_email_recipient">markkagua@gmail.com</string>
    <string name="home_categories_title">Categories</string>
    <string name="home_menu_title_hint">See All</string>
    <string name="home_greeting_morning">Good Morning, </string>
    <string name="home_greeting_afternoon">Good Afternoon, </string>
    <string name="home_greeting_evening">Good Evening, </string>
    <string name="home_navbar_greeting_placeholder">Good day,</string>
    <string name="home_navbar_user_name_text_placeholder">User!</string>
    <string name="item_categories_title">Categories</string>
    <string name="menu_title">Menu</string>
    <string name="menu_navbar_button_back_description">Back</string>
    <string name="menu_navbar_title">Categories</string>
    <string name="menu_list_navbar_back_button_description">Back</string>
    <string name="menu_item_list_title">Menu Items List</string>
    <string name="item_details_title">Item Details</string>
    <string name="item_details_description_title">Description</string>
    <string name="item_details_description_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="item_details_comments_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</string>
    <string name="item_details_comments_name_placeholder">Name</string>
    <string name="comments_title">Comments</string>
    <string name="comments_dialog_title">Rate this product</string>
    <string name="comments_dialog_field_hint">Let others know what you think</string>
    <string name="item_details_extended_fab_text">Add to cart</string>
    <string name="cart_empty_cart_text">Your Cart Is Empty</string>
    <string name="cart_empty_cart_button">Back to Menu</string>
    <string name="cart_footer_total_title">Total: </string>
    <string name="cart_footer_button_checkout">Checkout</string>
    <string name="cart_item_content_description">Cart Item</string>
    <string name="cart_navbar_title">Your Cart</string>
    <string name="cart_navbar_button_back_description">Back</string>
    <string name="cart_navbar_clean_cart_description">Clean cart</string>
    <string name="cart_dialog_title">Clear Cart?</string>
    <string name="cart_dialog_body">All the items in the cart will be deleted!</string>
    <string name="cart_dialog_positive_button_text">OK</string>
    <string name="order_success_title_text">Delivery Time:</string>
    <string name="order_success_body_text">Your order is confirmed and will be delivered to you soon!</string>
    <string name="order_success_eta_description">Orders within Nairobi may take upto 2 hrs. For orders outside Nairobi expect your delivery in 24hrs*</string>
    <string name="order_success_delivery_location_title">Delivery Address:</string>
    <string name="order_success_notification_title">Order Confirmed!</string>
    <string name="order_success_notification_description">@string/order_success_eta_description</string>
    <string name="account_navbar_text">Hey there 👋</string>
    <string name="account_button_logout">Logout</string>
    <string name="account_footer_terms_button"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="account_footer_social_description">Follow us on social</string>
    <string name="account_footer_instagram">Instagram</string>
    <string name="account_footer_tiktok">TikTok</string>
    <string name="account_footer_twitter">Twitter</string>
    <string name="account_footer_youtube">YouTube</string>
    <string name="account_footer_facebook">Facebook</string>
    <string name="account_contact_support_title">Contact Trill</string>
    <string name="history">History</string>
    <string name="login_button_text">Login</string>
    <string name="login_form_email">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_empty_email_field_error">Email cannot be empty</string>
    <string name="login_empty_password_field_error">Password cannot be empty</string>
    <string name="login_form_phone">Phone Number</string>
    <string name="login_signup_description">Don\'t have an account?</string>
    <string name="login_text_signup">Sign Up Now.</string>
    <string name="login_form_location">Location</string>
    <string name="login_form_contact_person">Contact Person</string>
    <string name="register_field_name_hint">Company Name</string>
    <string name="register_field_phone_number_hint">Phone Number</string>
    <string name="register_field_email_hint">Email Address</string>
    <string name="register_field_password_hint">Password</string>
    <string name="register_field_repeat_password_hint">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="register_login_description">Already have an account?</string>
    <string name="register_text_login">Login.</string>
    <string name="register_empty_name_field_error">Name cannot be empty</string>
    <string name="register_empty_email_field_error">Email cannot be empty</string>
    <string name="register_invalid_email_field_error">Invalid Email Address</string>
    <string name="register_empty_phone_field_error">Phone number cannot be empty</string>
    <string name="register_invalid_phone_field_error">Phone number is invalid</string>
    <string name="register_empty_password_field_error">Password cannot be empty</string>
    <string name="register_invalid_password_field_error">Password is too short</string>
    <string name="contact_support_office_phone_number"><u>0726012222</u></string>
    <string name="contact_support_peter_number"><u>0717659527</u></string>
    <string name="contact_support_call_peter">Call Peter:</string>
    <string name="contact_support_call_office">Call Office:</string>
    <string name="contact_support_or_text">Or</string>
    <string name="contact_support_navbar_button_back_description">Back</string>
    <string name="contact_support_navbar_phone_description">Phone</string>
    <string name="contact_support_heading">Questions? Concerns?\nWe\'re here to help.</string>
    <string name="contact_support_hint">Tell us what you need and we’ll get back to you within one business day. Need immediate help? Call us by clicking the call icon!</string>
    <string name="contact_support_button_text">Send Feedback</string>
    <string name="contact_support_empty_message_error">Oops! Can\'t send an empty message.</string>
    <string name="contact_support_modal_title">Call Us</string>
    <string name="contact_support_modal_subtitle">We are available on Mondays - Saturday between 8:30AM to 5:00PM</string>
    <string name="contact_support_modal_phone_link">or</string>
    <string name="contact_support_modal_phone_icon">📞</string>
    <string name="profile_title">Profile</string>
    <string name="profile_org_name_hint">Organization Name *</string>
    <string name="profile_org_phone_hint">Phone Number *</string>
    <string name="profile_org_email_hint">Email Address *</string>
    <string name="profile_org_address_hint">Address *</string>
    <string name="profile_org_contact_person_hint">Contact Person *</string>
    <string name="profile_org_profile_hint">PIN Number</string>
    <string name="profile_button_text">Save</string>
    <string name="profile_navbar_title">My Profile</string>
    <string name="profile_navbar_button_back_description">Back</string>
    <string name="profile_dialog_title">Update Profile</string>
    <string name="profile_dialog_description">Would you like to make these changes to your profile?</string>
    <string name="profile_dialog_negative_button_text">Cancel</string>
    <string name="profile_dialog_positive_button_text">Save</string>
    <string name="checkout_page_title">Checkout</string>
    <string name="register_invalid_contact_person_error">Please input the contact person</string>
    <string name="register_invalid_address_field_error">Please input your address</string>
    <string-array name="payment_methods">
        <item>Cash On Delivery</item>
        <item>Lipa na M-PESA</item>
  
    </string-array>
</resources>