<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="26dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_navbar_greeting_placeholder"
        android:textSize="@dimen/home_navbar_text_greeting_size"
        android:textColor="@color/home_navbar_greeting_color"
        android:fontFamily="@font/a_love_of_thunder_katia_diamante"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:fontFamily="@font/a_love_of_thunder_katia_diamante"
        android:id="@+id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_navbar_user_name_text_placeholder"
        android:textColor="@color/home_navbar_user_name_color"
        android:textSize="@dimen/home_navbar_user_name_text_size"/>


    <ImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/home_button_account_size"
        android:layout_height="@dimen/home_button_account_size"
        android:src="@drawable/button_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/home_navbar_profile_icon_margin_top"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/profile_title" />

</androidx.constraintlayout.widget.ConstraintLayout>