<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contact_support_navbar_margin_start"
        android:layout_marginTop="@dimen/contact_support_navbar_margin_top"
        android:contentDescription="@string/contact_support_navbar_button_back_description"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/colby_bold"
        android:text="@string/account_contact_support_title"
        android:textColor="@color/contact_support_navbar_title_color"
        android:textSize="@dimen/account_contact_support_navbar_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backPressed" />

    <ImageView
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_phone_ripple"
        android:id="@+id/phone"
        android:layout_width="@dimen/contact_support_navbar_phone_image_size"
        android:layout_height="@dimen/contact_support_navbar_phone_image_size"
        android:layout_marginEnd="@dimen/contact_support_navbar_margin_end"
        android:src="@drawable/button_phone"
        android:contentDescription="@string/contact_support_navbar_phone_description"
        app:layout_constraintBottom_toBottomOf="@id/backPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backPressed" />

</androidx.constraintlayout.widget.ConstraintLayout>